# ChangeLog for sci-visualization/charty
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Apr 2011; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild:
  Keyworded x86.

  06 Apr 2011; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild:
  Keyworded amd64.

  08 Mar 2011; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild:
  Keyworded ~x86.

  07 Mar 2011; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild,
  +files/charty-0.1.0-fix_example.patch:
  Fix links to CSS in examples.

*charty-0.1.0 (07 Mar 2011)

  07 Mar 2011; James Rowe <jnrowe@gmail.com> +charty-0.1.0.ebuild,
  +files/charty-0.1.0-include_css.patch, +metadata.xml, +watch:
  Initial ebuild, by me [303].
