@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-AUX charty-0.1.0-fix_example.patch 1815 RMD160 1622c04fc2c0a384585623a98e0f11a3e64caa23 SHA1 14ed7c7cc511f9125fcd75e79eebcb96b48937e8 SHA256 5b3c9d48c4dfc65f4102d7acbecf6c96c712e2b31acbcfc83b6032938e814950
-AUX charty-0.1.0-include_css.patch 518 RMD160 e796c35445a3defefeced77c2eddef425ab29a1a SHA1 7fffdf49d29cf3201e2a84be8a4676a4ff74aad1 SHA256 085a478da0b51cbe329dea8a0513aeefb6a526c9ce784abe5c364d425167f0c0
+AUX charty-0.1.0-fix_example.patch 1911 RMD160 dbf58805f43c007d17dde494a1efbb1c29a1df6e SHA1 57231b5121edef1f6e35f8e8eef8384b204daf6f SHA256 a9a917fd9d4829e41a63e39aff28a9311609f40ab07a12ba548a42b58e831792
+AUX charty-0.1.0-include_css.patch 597 RMD160 a219afbf0a5bffd01164e1ab3489a4524965ac10 SHA1 86bec5681cf559c054c847b6028b4dea61690271 SHA256 6ae3a624458db0f966e1f730df8401d7c5992aa8153b71aedf9797a835ba9eb8
 DIST Charty-0.1.0.tar.gz 16372 RMD160 02ed8dd1b606961eb8f68dc0b07e996c2e389fea SHA1 f334f0a2ab8d0dcff933798312f02e74d444365b SHA256 1a8b3f43009e2f0e106d60b206a4837c1e01f55d52755ba0911ac13b93542ab9
 EBUILD charty-0.1.0.ebuild 577 RMD160 d5a43f60ec12a5816f444c1a770698a6d6fe2d4a SHA1 32e9f69c593874504b76f6790c6d2e1a365a63ed SHA256 9d871626cd90d204ad8a91396eb70a3eb4e01688e315821ce0abe89c69a85167
-MISC ChangeLog 712 RMD160 d72915d1991fbb6ae5510c406ea31229f90b558a SHA1 addaac4447b683fc21aa6a6dd75080a1df78c9b1 SHA256 fbcd99a49624c5f21e6d859e7a15e952e6d9d3f739c617ae756c8a3420df0ef2
+MISC ChangeLog 863 RMD160 70b5d270a7e2c164f8b191fdbf7b016f76bf5589 SHA1 6dfcc24322c4eb829c1a59e7c9ae8efe27104f3d SHA256 d58d22f90d5b53d5a86bf2b941598c3439c257d2208002b9a0ef1cced166fcb8
 MISC metadata.xml 1130 RMD160 51b15954383ed2dc408f436187977c3d01a7f6e7 SHA1 2e3118927d519aadf76fba448aaee3d87ab26e77 SHA256 df407120d613953b2273399fc141e3a210468f4925092d7a2dbff889e7d0bbfe
 MISC watch 21 RMD160 2ce59eb926e4975f0122b677a33cedbb95afbbeb SHA1 05c93a47471bd0ddbb85e05a6260114fe5745566 SHA256 d5893ce8056c7460b172466aa23df38baa08d04e7ea02b009290c1da1875912c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4GBlMACgkQzJrj3cAXR0mb+gCglQfGRtQIlGDGMRQekeO4usnL
-E8IAn2eqDl3UVeVNas8PGqL+VKBw5Sjl
-=QUME
+iEYEAREKAAYFAk6b7v4ACgkQzJrj3cAXR0lOHgCgtSHItY4KP7fIzLt4LBRqknyK
+DckAni0qy3eEDj6KN7K3OwP++5YpoRSc
+=vBwh
 -----END PGP SIGNATURE-----
