@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Oct 2011; James Rowe <jnrowe@gmail.com>
+  files/charty-0.1.0-fix_example.patch, files/charty-0.1.0-include_css.patch:
+  Added patch description.
+
   07 Apr 2011; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild:
   Keyworded x86.
 
